--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <!--Font Awesome link-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!--Font Awesome link-->
+  <!--Vue Js link-->
+  <script src='https://unpkg.com/vue@3'></script>
+  <!--Vue Js link-->
   <title>Document</title>
   <link rel='stylesheet' href='css/style.css'>
 </head>
 <body>
+    <div id="app">
+        <div class="container">
+            <!-- Colonna sinistra con l'elenco delle chat -->
+            <div class="sidebar-chats-container">
+                <div class="admin-panel">
+                    <div class="admin-info flex-center">
+                        <img src="./img/avatar_io.jpg" alt="">
+                        <span>Sofia</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
   <script type='text/javascript' src='js/script.js'></script>
 </body>
 </html>
