feat: add admin panel

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                         <img src="./img/avatar_io.jpg" alt="">
                         <span>Sofia</span>
                     </div>
+                    <div class="admin-actions flex-center">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
                 </div>
             </div>
         </div>
