feat: add notifications section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="container">
             <!-- Colonna sinistra con l'elenco delle chat -->
             <div class="sidebar-chats-container">
+                <!-- Sezione con admin -->
                 <div class="admin-panel">
                     <div class="admin-info flex-center">
                         <img src="./img/avatar_io.jpg" alt="">
@@ -26,6 +27,16 @@
                         <i class="fa-solid fa-circle-notch"></i>
                         <i class="fa-solid fa-message"></i>
                         <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
+                </div>
+                <!-- Sezione azzurra per le notifiche -->
+                <div class="notifications">
+                    <div class="bell flex-center">
+                        <i class="fa-solid fa-bell-slash"></i>
+                    </div>
+                    <div class="notifications-actions">
+                        <span>Ricevi notifiche di nuovi messaggi</span>
+                        <span>Attiva notifiche desktop</span>
                     </div>
                 </div>
             </div>
