feat: add searchbar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
                         <span>Attiva notifiche desktop</span>
                     </div>
                 </div>
+                <!-- Search bar delle chat -->
+                <div class="search-bar">
+                    <button class="search-icon-container">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                    <div class="search">
+                        <input type="text" placeholder="Cerca o iniza una nuova chat">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
