feat: add static chat list

--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
                         <input type="text" placeholder="Cerca o iniza una nuova chat">
                     </div>
                 </div>
+                <!-- Chat List -->
+                <div class="chats-list">
+                    <ol>
+                        <!-- Stampo i singoli <li> dinamicamente con Vue -->
+                        <li>
+                            <div class="chats-list-img">
+                                <img src="./img/avatar_1.jpg" alt="">
+                            </div>
+                            <div class="chats-list-user">
+                                <h2>[Nome]</h2>
+                                <small>Ultimo accesso</small>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
             </div>
         </div>
     </div>
