feat: add send message bar

--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
                         <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                 </div>
+                <!-- Sezione con la chat -->
+                <div class="chat">
+
+                </div>
+                <!-- Footer con barra per scrivere messaggio -->
+                <div class="send-bar">
+                    <div class="face flex-center">
+                        <i class="fa-regular fa-face-smile"></i>
+                    </div>
+                    <div class="send-mex">
+                        <input type="text" placeholder="Scrivi un messaggio">
+                    </div>
+                    <div class="vocal-audio flex-center">
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
