feat: add chat with contacts (non funziona però)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                 </div>
                 <!-- Sezione con la chat -->
                 <div class="chat">
-
+                    <div class="sent">
+                        ciao come stai
+                    </div>
+                    <div class="received">tutto bene grazie</div>
                 </div>
                 <!-- Footer con barra per scrivere messaggio -->
                 <div class="send-bar">
