--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                 </div>
                 <!-- Sezione con la chat -->
                 <div class="chat">
-                    <div class="sent">
-                        ciao come stai
+                    <div class="message-container">
+                        <div class="message">Ciao</div>
+                        <div class="message send">Fabio</div>
                     </div>
-                    <div class="received">tutto bene grazie</div>
                 </div>
                 <!-- Footer con barra per scrivere messaggio -->
                 <div class="send-bar">
