fix: added some margin between messages

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 <div class="chat">
                     <div class="message-container">
                         <div class="message">Ciao</div>
+                        <div class="message">Ciao</div>
                         <div class="message send">Fabio</div>
                     </div>
                 </div>
